--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -16,13 +16,32 @@
 }
 
 .container-center {
-  margin: 30% auto;
-  max-width: 980px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: auto;
+  white-space: nowrap;
+  text-align: center;
+  font-size: 0;
+
+  &::before {
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+  }
 }
 
-.flexContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  max-width: 980px;
+.content-center {
+  display: inline-block;
+  white-space: normal;
+  vertical-align: middle;
+  text-align: left;
+
+  img {
+    display: block;
+    border: none;
+  }
 }
