--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -1,4 +1,5 @@
 @import '~sass-mq';
+
 .overlay {
   height: 100vh;
   width: 100vw;
@@ -6,7 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -10;
+  z-index: -1;
 }
 
 .Popup {
@@ -15,7 +16,6 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  z-index: 10;
 }
 
 .Popup__content {
@@ -23,8 +23,12 @@
   flex-direction: column;
   padding: 20px;
   border-radius: 12px;
-  min-width: 250px;
-  min-height: 200px;
+  max-width: 260px;
+  min-height: 100px;
+
+  @include mq($from: tablet) {
+    max-width: 700px;
+  }
 }
 
 .Popup__content-decoration {
