--- a/app/scss/abstracts/_mixsins.scss
+++ b/app/scss/abstracts/_mixsins.scss
@@ -28,3 +28,11 @@
     border: none;
   }
 }
+
+@mixin clearBtn($p: 10px) {
+  padding: $p;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+}
