--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -34,7 +34,7 @@
 
 .Popup__content-decoration {
   background-color: white;
-  box-shadow: rgb(0 0 0 / 50%) 0 16px 70px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 16px 70px;
 }
 
 .Popup__contentHeader {
@@ -46,12 +46,13 @@
 }
 
 .clearBtn {
+  padding: 10px;
   @include clearBtn;
 }
 
 .Popup__closeBtn {
   cursor: pointer;
-  transition-duration: 0.4s;
+  transition-duration: .4s;
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
@@ -75,22 +76,22 @@
 // used this library for animation https://animate.style/
 
 .fadeIn {
-  animation: 0.5s fadeIn;
+  animation: .5s fadeIn;
 }
 
 .backInDown {
-  animation: 0.5s backInDown;
+  animation: .5s backInDown;
 }
 
 @keyframes backInDown {
   0% {
     transform: translateY(-1200px) scale(0.7);
-    opacity: 0.7;
+    opacity: .7;
   }
 
   80% {
-    transform: translateY(0px) scale(0.7);
-    opacity: 0.7;
+    transform: translateY(0px) scale(.7);
+    opacity: .7;
   }
 
   100% {
