--- a/app/scss/App.scss
+++ b/app/scss/App.scss
@@ -1,11 +1,9 @@
 // ############ VENDORS ############
-@import 'normalize.css';
-
+@import "normalize.css";
 
 // ############ BASE ############
-@import 'base/_resets';
-@import 'base/_typography';
-
+@import "base/_resets";
+@import "base/_typography";
 
 // ############ THEMES ############
 // @import 'themes/..';
