--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -5,6 +5,8 @@
   vertical-align: middle;
   min-width: 64px;
   padding: 6px 16px;
+  border: 0;
+  border-radius: 4px;
   cursor: pointer;
   text-decoration: none;
   transition: .3s;
@@ -16,10 +18,6 @@
 
   &:active {
     background-color: darken(#03a9f4, 10%);
-  }
-
-  &:focus {
-    outline: #d500f9;
   }
 }
 
