--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -1,10 +1,10 @@
 @import '~sass-mq';
 
 .overlay {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.4);
   position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, .4);
   top: 0;
   left: 0;
   z-index: -1;
@@ -14,8 +14,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  min-width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .Popup__content {
@@ -33,7 +36,7 @@
 
 .Popup__content-decoration {
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.5) 0 16px 70px;
+  box-shadow: rgba(0, 0, 0, .5) 0 16px 70px;
 }
 
 .Popup__contentHeader {
@@ -44,7 +47,7 @@
   padding: 15px 0;
 }
 
-.clearBtn {
+.clearButton {
   padding: 10px;
   border: none;
   font: inherit;
@@ -53,7 +56,7 @@
   cursor: pointer;
 }
 
-.Popup__closeBtn {
+.Popup__closeButton {
   cursor: pointer;
   transition-duration: .4s;
   font-size: 1.5rem;
@@ -88,7 +91,7 @@
 
 @keyframes backInDown {
   0% {
-    transform: translateY(-1200px) scale(0.7);
+    transform: translateY(-1200px) scale(.7);
     opacity: .7;
   }
 
