--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -1,4 +1,4 @@
-@import '~sass-mq';
+@import "~sass-mq";
 
 .overlay {
   position: fixed;
@@ -66,7 +66,8 @@
   text-shadow: 0 1px 0 #fff;
   opacity: .5;
 
-  &:hover, &:active {
+  &:hover,
+  &:active {
     color: #000;
     text-decoration: none;
     opacity: .75;
@@ -96,7 +97,7 @@
   }
 
   80% {
-    transform: translateY(0px) scale(.7);
+    transform: translateY(0) scale(.7);
     opacity: .7;
   }
 
