--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -2,7 +2,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgb(0 0 0 / .4);
   top: 0;
   left: 0;
   z-index: -1;
@@ -34,7 +34,7 @@
 
 .Popup__content-decoration {
   background-color: white;
-  box-shadow: rgba(0, 0, 0, .5) 0 16px 70px;
+  box-shadow: rgb(0 0 0 / .5) 0 16px 70px;
 }
 
 .Popup__contentHeader {
