add spinner and test

--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -25,6 +25,36 @@
   }
 }
 
+.Button__spinner {
+  /* Spinner size and color */
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-top-color: #444;
+  border-left-color: #444;
 
+  /* Additional spinner styles */
+  animation: spinner 400ms linear infinite;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  vertical-align: middle;
+}
 
+/* Animation styles */
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-slow {
+  animation: spinner 1s linear infinite;
+}
 
