--- a/app/components/Loader/Loader.scss
+++ b/app/components/Loader/Loader.scss
@@ -14,26 +14,27 @@
   margin: 8px;
   border: 8px solid #000;
   border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
+  animation: lds-ring 1.2s cubic-bezier(.5, 0, .5, 1) infinite;
+  border-color: #000 transparent transparent;
 }
 
 .Loader div:nth-child(1) {
-  animation-delay: -0.45s;
+  animation-delay: -.45s;
 }
 
 .Loader div:nth-child(2) {
-  animation-delay: -0.3s;
+  animation-delay: -.3s;
 }
 
 .Loader div:nth-child(3) {
-  animation-delay: -0.15s;
+  animation-delay: -.15s;
 }
 
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
