--- a/app/scss/abstracts/_mixins.scss
+++ b/app/scss/abstracts/_mixins.scss
@@ -15,3 +15,26 @@
   // webkit-powered
   transform: translate3d(0, 0, 0);
 }
+
+@mixin overlay($color: black, $opacity: 1) {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: color.adjust($color, $opacity);
+
+  @include size(100%, 100%)
+}
+
+@mixin cover() {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+@mixin coverer() {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  @include size(100%, 100%);
+}
