--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -13,11 +13,11 @@
   background-color: #03a9f4;
 
   &:hover {
-    background-color: adjust-color(#03a9f4, $lightness: $lighten_amount);
+    background-color: color.adjust(#03a9f4, $lightness: $lighten_amount);
   }
 
   &:active {
-    background-color: adjust-color(#03a9f4, $lightness: $darken_amount);
+    background-color: color.adjust(#03a9f4, $lightness: $darken_amount);
   }
 
   &:disabled {
