--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -4,17 +4,15 @@
   left: 0;
   z-index: -1;
 
-  width: 100%;
-  height: 100%;
-
   background-color: rgb(0 0 0 / .4);
+
+  @include size(100%, 100%);
 }
 
 .Popup {
   position: absolute;
   top: 50%;
   left: 50%;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,10 +52,8 @@
 .clearButton {
   padding: 10px;
   border: none;
-
   background-color: transparent;
   color: inherit;
-
   font: inherit;
 
   cursor: pointer;
@@ -65,7 +61,6 @@
 
 .Popup__closeButton {
   color: #000;
-
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 1;
@@ -73,13 +68,11 @@
 
   opacity: .5;
   cursor: pointer;
-
   transition-duration: .4s;
 
   &:hover,
   &:active {
     color: #000;
-
     text-decoration: none;
 
     opacity: .75;
@@ -87,7 +80,6 @@
 
   &:focus {
     color: black;
-
     font-size: 2rem;
 
     opacity: 1;
@@ -107,19 +99,16 @@
 @keyframes backInDown {
   0% {
     opacity: .7;
-
     transform: translateY(-1200px) scale(.7);
   }
 
   80% {
     opacity: .7;
-
     transform: translateY(0) scale(.7);
   }
 
   100% {
     opacity: 1;
-
     transform: scale(1);
   }
 }
