--- a/app/components/Popup/Popup.scss
+++ b/app/components/Popup/Popup.scss
@@ -1,4 +1,4 @@
-.overlay {
+.Popup__overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -49,7 +49,7 @@
   padding: 15px 0;
 }
 
-.clearButton {
+.Popup__clearButton {
   padding: 10px;
   border: none;
   background-color: transparent;
@@ -88,15 +88,15 @@
 
 // used this library for animation https://animate.style/
 
-.fadeIn {
-  animation: .5s fadeIn;
+.Popup__content-fadeIn {
+  animation: .5s fade-in;
 }
 
-.backInDown {
-  animation: .5s backInDown;
+.Popup__content-backInDown {
+  animation: .5s back-in-down;
 }
 
-@keyframes backInDown {
+@keyframes back-in-down {
   0% {
     opacity: .7;
     transform: translateY(-1200px) scale(.7);
@@ -113,7 +113,7 @@
   }
 }
 
-@keyframes fadeIn {
+@keyframes fade-in {
   from {
     opacity: 0;
   }
