--- a/app/components/SingInForm/SingInForm.scss
+++ b/app/components/SingInForm/SingInForm.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .SingInForm {
   display: flex;
   flex-direction: column;
@@ -80,8 +82,6 @@
     font-size: 1.2rem;
   }
 }
-
-// error
 
 .SingInForm__error {
   color: #d32f2f;
