--- a/app/components/ChangePasswordForm/ChangePasswordForm.scss
+++ b/app/components/ChangePasswordForm/ChangePasswordForm.scss
@@ -31,7 +31,7 @@
 .ChangePasswordForm__group {
   width: 100%;
   position: relative;
-  margin-bottom: 32px;
+  margin-bottom: 45px;
 }
 
 .ChangePasswordForm__label {
@@ -48,6 +48,7 @@
 }
 
 .ChangePasswordForm__input {
+  position: relative;
   width: 100%;
   padding: 0 0 10px 0;
   border: none;
@@ -87,6 +88,8 @@
 // error
 
 .ChangePasswordForm__error {
+  position: absolute;
+  top: 20px;
   color: #d32f2f;
   font-size: 0.9rem;
 }
