--- a/app/components/ChangePasswordForm/ChangePasswordForm.scss
+++ b/app/components/ChangePasswordForm/ChangePasswordForm.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+
   min-width: 270px;
   padding: 32px;
   border-radius: 10px;
@@ -19,9 +20,10 @@
 
 .ChangePasswordForm__title {
   align-self: center;
-  text-align: center;
-  font-size: 2rem;
+
   font-weight: normal;
+  font-size: 2rem;
+  text-align: center;
 
   @include mq($from: desktop) {
     font-size: 3rem;
@@ -29,8 +31,9 @@
 }
 
 .ChangePasswordForm__group {
-  width: 100%;
   position: relative;
+
+  width: 100%;
   margin-bottom: 45px;
 }
 
@@ -39,7 +42,9 @@
   top: 0;
   left: 0;
   z-index: -1;
+
   color: #9e9e9e;
+
   transition: .3s;
 
   @include mq($from: desktop) {
@@ -49,12 +54,14 @@
 
 .ChangePasswordForm__input {
   position: relative;
+
   width: 100%;
-  padding: 0 0 10px 0;
+  padding: 0 0 10px;
   border: none;
   border-bottom: 1px solid #e0e0e0;
   background-color: transparent;
   outline: none;
+
   transition: .3s;
 
   &:focus {
@@ -64,11 +71,12 @@
   &:focus ~ .ChangePasswordForm__label,
   &:not(:placeholder-shown) ~ .ChangePasswordForm__label {
     top: -18px;
-    font-size: 0.75rem;
+
     color: #03a9f4;
+    font-size: .75rem;
 
     @include mq($from: desktop) {
-      font-size: 0.9rem;
+      font-size: .9rem;
     }
   }
 }
@@ -90,8 +98,9 @@
 .ChangePasswordForm__error {
   position: absolute;
   top: 20px;
+
   color: #d32f2f;
-  font-size: 0.9rem;
+  font-size: .9rem;
 }
 
 .ChangePasswordForm__input[aria-invalid="true"] {
