--- a/app/components/ResendConfirmationForm/ResendConfirmationForm.scss
+++ b/app/components/ResendConfirmationForm/ResendConfirmationForm.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+
   min-width: 270px;
   height: 350px;
   padding: 32px;
@@ -20,9 +21,10 @@
 
 .ResendConfirmationForm__title {
   align-self: center;
-  text-align: center;
-  font-size: 2rem;
+
   font-weight: normal;
+  font-size: 2rem;
+  text-align: center;
 
   @include mq($from: desktop) {
     font-size: 3rem;
@@ -30,8 +32,9 @@
 }
 
 .ResendConfirmationForm__group {
-  width: 100%;
   position: relative;
+
+  width: 100%;
   margin-bottom: 45px;
 }
 
@@ -40,7 +43,9 @@
   top: 0;
   left: 0;
   z-index: -1;
+
   color: #9e9e9e;
+
   transition: .3s;
 
   @include mq($from: desktop) {
@@ -50,12 +55,14 @@
 
 .ResendConfirmationForm__input {
   position: relative;
+
   width: 100%;
-  padding: 0 0 10px 0;
+  padding: 0 0 10px;
   border: none;
   border-bottom: 1px solid #e0e0e0;
   background-color: transparent;
   outline: none;
+
   transition: .3s;
 
   &:focus {
@@ -65,11 +72,12 @@
   &:focus ~ .ResendConfirmationForm__label,
   &:not(:placeholder-shown) ~ .ResendConfirmationForm__label {
     top: -18px;
-    font-size: 0.75rem;
+
     color: #03a9f4;
+    font-size: .75rem;
 
     @include mq($from: desktop) {
-      font-size: 0.9rem;
+      font-size: .9rem;
     }
   }
 }
@@ -78,7 +86,7 @@
   width: 100%;
   padding: 10px 20px;
   color: #fff;
-  font-size: 0.9rem;
+  font-size: .9rem;
   text-transform: uppercase;
 
   @include mq($from: desktop) {
@@ -91,8 +99,9 @@
 .ResendConfirmationForm__error {
   position: absolute;
   top: 20px;
+
   color: #d32f2f;
-  font-size: 0.9rem;
+  font-size: .9rem;
 }
 
 .ResendConfirmationForm__input[aria-invalid="true"] {
