--- a/app/components/SingInForm/SingInForm.scss
+++ b/app/components/SingInForm/SingInForm.scss
@@ -12,6 +12,7 @@
   box-shadow: 0 4px 16px #ccc;
 
   @include centerer;
+
   @include mq($from: desktop) {
     min-width: 380px;
   }
@@ -30,8 +31,9 @@
 }
 
 .SingInForm__group {
-  width: 100%;
   position: relative;
+
+  width: 100%;
   margin-bottom: 32px;
 }
 
@@ -40,7 +42,9 @@
   top: 0;
   left: 0;
   z-index: -1;
+
   color: #9e9e9e;
+
   transition: .3s;
 
   @include mq($from: desktop) {
@@ -50,7 +54,7 @@
 
 .SingInForm__input {
   width: 100%;
-  padding: 0 0 10px 0;
+  padding: 0 0 10px;
   border: none;
   border-bottom: 1px solid #e0e0e0;
   background-color: transparent;
@@ -65,11 +69,12 @@
   &:focus ~ .SingInForm__label,
   &:not(:placeholder-shown) ~ .SingInForm__label {
     top: -18px;
-    font-size: 0.75rem;
+
     color: #03a9f4;
+    font-size: .75rem;
 
     @include mq($from: desktop) {
-      font-size: 0.9rem;
+      font-size: .9rem;
     }
   }
 }
