--- a/app/scss/App.scss
+++ b/app/scss/App.scss
@@ -10,6 +10,10 @@
 // ############ THEMES ############
 // @import "themes/..";
 
+.App {
+  display: flex;
+}
+
 .SuspenseComponent .Loader {
   @include centerer;
 }
