--- a/app/components/SideBar/SideBar.scss
+++ b/app/components/SideBar/SideBar.scss
@@ -12,11 +12,48 @@
 }
 
 .SideBar__navList {
-
+  margin: 20px 0 0 0;
+  padding: 0;
+  list-style: none;
 }
 
-.SideBar.active {
+.SideBar__navItem {
+  text-align: center;
+}
+
+.SideBar__link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 5px;
+  text-decoration: none;
+  color: #919699;
+
+  &.active {
+    color: #000;
+  }
+
+  &:hover,
+  &:focus {
+    color: #000;
+  }
+
+  & path {
+    transition: .3s;
+    fill: currentColor;
+  }
+}
+
+.SideBar__text {
+  display: none;
+}
+
+.SideBar.SideBar-active {
   transition: .3s;
+
+  & .SideBar__text {
+    display: inline;
+  }
 
   @include size(250px, 100vh);
 }
@@ -52,13 +89,20 @@
   }
 }
 
-.SideBar.active .Sidebar__arrowIcon {
+.SideBar.SideBar-active .Sidebar__arrowIcon {
   transform: rotate(180deg);
 }
 
 .Sidebar__divider {
-  width: 100%;
-  height: 1px;
-  border-radius: 1px;
-  background-color: #333;
+  position: relative;
+
+  &:after {
+    position: absolute;
+    transform: translateX(30%);
+    content: '';
+    width: 60%;
+    height: 1px;
+    border-radius: 1px;
+    background-color: #919699;
+  }
 }
