--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 .Button {
   position: relative;
   display: inline-flex;
@@ -18,11 +16,11 @@
   transition: .3s;
 
   &:hover {
-    background-color: color.adjust(#03a9f4, $lightness: $lighten-amount);
+    background-color: adjust-color(#03a9f4, $lightness: $lighten-amount);
   }
 
   &:active {
-    background-color: color.adjust(#03a9f4, $lightness: $darken-amount);
+    background-color: adjust-color(#03a9f4, $lightness: $darken-amount);
   }
 
   &:disabled {
