--- a/app/components/OmniAuthButton/OmniAuthButton.scss
+++ b/app/components/OmniAuthButton/OmniAuthButton.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 .Button {
   display: inline-flex;
   vertical-align: middle;
@@ -19,11 +17,11 @@
   transition: .3s;
 
   &:hover {
-    background-color: color.adjust(#03a9f4, $lightness: $lighten-amount);
+    background-color: adjust-color(#03a9f4, $lightness: $lighten-amount);
   }
 
   &:active {
-    background-color: color.adjust(#03a9f4, $lightness: $darken-amount);
+    background-color: adjust-color(#03a9f4, $lightness: $darken-amount);
   }
 
   &:disabled {
