--- a/app/components/SideBar/SideBar.scss
+++ b/app/components/SideBar/SideBar.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 .SideBar {
   position: sticky;
 
@@ -108,8 +106,8 @@
 
 .Sidebar__divider {
   width: 60%;
-  border: 0;
   height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  border: 0;
+  border-top: 1px solid rgb(0 0 0 / .1);
+  border-bottom: 1px solid rgb(255 255 255 / .3);
 }
