--- a/app/scss/abstracts/_mixins.scss
+++ b/app/scss/abstracts/_mixins.scss
@@ -29,7 +29,7 @@
   top: 0;
   left: 0;
 
-  background-color: color.adjust($color, $alpha: $opacity);
+  background-color: adjust-color($color, $alpha: $opacity);
 
   @include size(100%, 100%);
 }
