add settings component with ant disign

--- a/app/components/SideBar/SideBar.scss
+++ b/app/components/SideBar/SideBar.scss
@@ -3,7 +3,7 @@
 
   margin-right: 15px;
 
-  @include size(80px, 100vh);
+  @include size(80px);
   background-color: #f7f9fa;
 
   transition: .3s;
