add settings component with ant disign

--- a/app/scss/App.scss
+++ b/app/scss/App.scss
@@ -4,6 +4,7 @@
 // ############ BASE ############
 @import "base/_resets";
 @import "base/_typography";
+@import 'antd/dist/antd.css';
 
 // ############ THEMES ############
 // @import "themes/..";
